lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp.clang-tidy.loop-label.out.log
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:2565:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:2565:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:2579:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:2579:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:2593:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:2593:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:4549:7: warning: Added loop label VITIS_LOOP_1248_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1248_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:4549:7: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6526:44: error: Invalid Directive: for current device, ram_t2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=tmp type=ram_t2p impl=bram
                                           ^
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6535:2: warning: Added loop label VITIS_LOOP_51_1:   [xilinx-label-all-loops]
 for (int j = 0; j < 64; j++) {
 ^~~
 VITIS_LOOP_51_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6535:2: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6541:5: warning: Added loop label VITIS_LOOP_57_2:   [xilinx-label-all-loops]
    for (int i = 0; i < 256; i++) {
    ^~~
    VITIS_LOOP_57_2: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6541:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6544:9: warning: Added loop label VITIS_LOOP_60_3:   [xilinx-label-all-loops]
        for (int j = 0; j < 64; j++) {
        ^~~
        VITIS_LOOP_60_3: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6544:9: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6553:9: warning: Added loop label VITIS_LOOP_69_4:   [xilinx-label-all-loops]
        for (int jb = 0; jb < 64; jb += 8) {
        ^~~
        VITIS_LOOP_69_4: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6553:9: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6556:2: warning: Added loop label VITIS_LOOP_72_5:   [xilinx-label-all-loops]
 for (int k = 0; k < 8; k++) {
 ^~~
 VITIS_LOOP_72_5: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6556:2: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6567:5: warning: Added loop label VITIS_LOOP_83_6:   [xilinx-label-all-loops]
    for (int jb = 0; jb < 64; jb += 8) {
    ^~~
    VITIS_LOOP_83_6: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6567:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6569:2: warning: Added loop label VITIS_LOOP_85_7:   [xilinx-label-all-loops]
 for (int k = 0; k < 8; k++) {
 ^~~
 VITIS_LOOP_85_7: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6569:2: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6577:5: warning: Added loop label VITIS_LOOP_93_8:   [xilinx-label-all-loops]
    for (int i = 0; i < 256; i++) {
    ^~~
    VITIS_LOOP_93_8: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6577:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6578:9: warning: Added loop label VITIS_LOOP_94_9:   [xilinx-label-all-loops]
        for (int jb = 0; jb < 64; jb += 2) {
        ^~~
        VITIS_LOOP_94_9: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6578:9: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6580:2: warning: Added loop label VITIS_LOOP_96_10:   [xilinx-label-all-loops]
 for (int k = 0; k < 2; k++) {
 ^~~
 VITIS_LOOP_96_10: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6580:2: note: FIX-IT applied suggested code changes
